Fix tests on 1440p 900p size of screen